@@ -2,6 +2,9 @@
 # This file is updated with Maddlog
 
 * Thu Sep 14 2017 Sjoerd Mullender <sjoerd@acm.org>
+- The length "method" for atoms now returns a size_t, the "len" field of
+  a ValRecord is now a size_t, the "size" field of the atomDesc structure
+  is now unsigned short.
 - Removed the "align" field from the ATOM descriptor (atomDesc) structure.
 - The atomtostr and atomfromstr "methods" for atoms now return ssize_t
   and require a pointer to size_t for the size of the buffer.
